@@ -28,7 +28,7 @@ If no options are given (i.e. only the \fIDEVICE\fR argument is given) then
 the names of all diagnostic pages supported are listed. Most, but not
 necessarily all, of the named diagnostic pages are defined in the SES
 standards and drafts. The most recent reference for this utility is the
-draft SCSI Enclosure Services 3 document T10/2149\-D Revision 6 at
+draft SCSI Enclosure Services 3 document T10/2149\-D Revision 7 at
 http://www.t10.org . Existing standards for SES and SES\-2 are ANSI INCITS
 305\-1998 and ANSI INCITS 448\-2008 respectively.
 .PP
